--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */
-
 :root {
   --color-primary: #5ec576;
   --color-secondary: #ffcb03;
@@ -12,6 +10,11 @@
   --color-tertiary-opacity: #ff58602d;
   --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
   --gradient-secondary: linear-gradient(to top left, #ffb003, #ffcb03);
+
+  --bp-large: 78.15em;
+  --bp-medium: 61.25em;
+  --bp-small: 43.8em;
+  --bp-smallest: 31.25em;
 }
 
 * {
@@ -23,6 +26,11 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+}
+@media only screen and (max-width: 61.25em) {
+  html {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -100,7 +108,6 @@ p {
   color: #666;
 }
 
-/* This is BAD for accessibility! Don't do in the real world! */
 button:focus {
   outline: none;
 }
@@ -659,6 +666,135 @@ h4 {
 .hidden {
   visibility: hidden;
   opacity: 0;
+}
+
+@media only screen and (max-width: 31.25em) {
+  .nav__links {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 43.8em) {
+  html {
+    font-size: 40%;
+  }
+
+  .section {
+    padding: 9rem 1rem;
+  }
+
+  .section__title {
+    margin: 0 auto 5rem;
+  }
+
+  .section__header {
+    font-size: 2.5rem;
+  }
+
+  .btn {
+    border-radius: 8rem;
+    padding: 1.25rem 4rem;
+  }
+
+  .nav {
+    padding: 0;
+  }
+
+  .header {
+    height: 50vh;
+    padding: 0 1.5rem;
+  }
+
+  .header__title {
+    grid-template-columns: none;
+  }
+
+  h1 {
+    font-size: 4rem;
+    line-height: 1.35;
+  }
+
+  h4 {
+    font-size: 2rem;
+  }
+
+  .header__img {
+    transform: none;
+  }
+
+  .features__feature {
+    width: 200%;
+    font-size: 1.4rem;
+  }
+
+  .operations__tab {
+    margin-right: 1rem;
+  }
+
+  .operations__content {
+    padding: 2rem;
+  }
+
+  .slider {
+    height: 60rem;
+  }
+
+  .slide {
+    height: 60rem;
+  }
+
+  .dots {
+    bottom: 0%;
+  }
+
+  .testimonial__header {
+    font-size: 2rem;
+  }
+
+  .testimonial__text {
+    font-size: 1.6rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .testimonial__author {
+    margin-left: 0;
+  }
+
+  .section--sign-up {
+    padding: 9rem 0rem;
+  }
+
+  .section--sign-up .btn {
+    padding: 2rem 4rem;
+    font-size: 1.8rem;
+  }
+
+  .footer {
+    padding: 9rem 1rem;
+  }
+
+  .footer__item {
+    margin-right: 1rem;
+  }
+
+  .footer__link {
+    font-size: 1.5rem;
+  }
+
+  .modal {
+    padding: 4rem;
+  }
+
+  .modal__header {
+    margin-bottom: 3.5rem;
+    font-size: 2.5rem;
+    line-height: 1.4;
+  }
+
+  .modal__form {
+    gap: 2rem;
+    margin: 0 2rem;
+  }
 }
 
 /* COOKIE MESSAGE */
